# migration_report

./: .gitignore  pyproject.toml
src/migration_report/: __main__.py  migration_report.py
