[project]
name = "migration-report"
version = "0.1.0"
description = ""
authors = [
    {name = "Victor Costa",email = "victorcosta@cx6dx37krh-2.taileb8bf.ts.net"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "tabulate (>=0.9.0,<0.10.0)"
]

[tool.poetry]
packages = [{include = "migration_report", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
